2006-01-17  Jordi Mas i Hernandez <jordimash@gmail.com>

	* DataGrid.cs: Fixes 77260
	
2006-01-17  Jordi Mas i Hernandez <jordimash@gmail.com>

	* DataGrid.cs: Clicking on a column on a empty grid was giving
	  an exception

2006-01-17  Peter Dennis Bartok  <pbartok@novell.com>

	* DataGrid.cs (OnKeyDown): Don't use the array if it's empty
	  or any keypress will crash the grid.

2006-01-17  Mike Kestner  <mkestner@novell.com>

	* MainMenu.cs (OnMenuChanged): set Height=0 to cause relayout.
	* ThemeWin32Classic.cs (CalcItemSize): clear Height/Width for 
	invisible/previously-visible items.
	[Fixes #76909]

2006-01-17  Alexander Olk  <alex.olk@googlemail.com>

	* ThemeClearlooks.cs:
	- Added CL_Draw_Button method; now other theme controls that are 
	  not derived from button or do not have a button can draw buttons
	  too
	- Updated ComboBox drawing
	- Beautified RadioButton drawing
	- Corrected drawing of bottom and left tabs
	- Beautified DateTimePicker and MonthCalendar
	- Added CPDrawButton and CPDrawRadioButton

2006-01-16  Jackson Harper  <jackson@ximian.com>

	* ComboBox.cs: Set the initial value of the scrollbar to the
	current index. Reduce the numbers of refreshs and IndexOfs called.

2006-01-14  Alexander Olk  <alex.olk@googlemail.com>

	* FileDialog.cs: When the file listview is focused hitting the
	  backspace key moves the fileview to the parent directory

2006-01-13  Peter Dennis Bartok  <pbartok@novell.com>

	* Form.cs: 
	  - Added RecreateHandle call when changing taskbar visibility to 
	    trigger reparenting in Win32 driver (Fixes #75719)
	  - If a window has minimize or maximize buttons, it cannot have
	    a help button
	* XplatUIWin32.cs:
	  - CreateWindow: When no WS_EX_APPWINDOW style is found we parent
	    the toplevel form with FosterParent (A toolwindow not on the
	    taskbar) (Fixes #75719)
	  - Made FosterParent a toolwindow

2006-01-13  Alexander Olk  <alex.olk@googlemail.com>
