@@ -1,3 +1,9 @@
+2006-01-17  Jackson Harper  <jackson@ximian.com>
+
+	* ThemeWin32Classic.cs:
+	* ListView.cs: Do not draw/clip the headers when the header style
+	is None.
+
 2006-01-17  Jordi Mas i Hernandez <jordimash@gmail.com>
 
 	* DataGrid.cs: Fixes 77260
